tests/ui/impl-trait/normalize-tait-in-const.stderr
error: ~const can only be applied to `#[const_trait]` traits
  --> $DIR/normalize-tait-in-const.rs:25:42
   |
LL | const fn with_positive<F: ~const for<'a> Fn(&'a Alias<'a>) + ~const Destruct>(fun: F) {
   |                                          ^^^^^^^^^^^^^^^^^

error: aborting due to previous error

